--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -25,7 +27,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -47,6 +49,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'de.ptb:ptb-gear-involute-calculator-basic:2.1'
+//    compile 'de.ptb:ptb-gear-involute-calculator-basic:2.2'
+//    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
+//    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
     testCompile 'junit:junit:4.12'
+    compile project(':basic')
 }
