--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         applicationId "com.ptb.length.involutecalculator"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         jackOptions {
@@ -49,9 +49,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-//    compile 'de.ptb:ptb-gear-involute-calculator-basic:2.2'
-//    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
-//    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
+    compile 'de.ptb:ptb-gear-involute-calculator-basic:2.3'
     testCompile 'junit:junit:4.12'
-    compile project(':basic')
+    compile group: 'org.slf4j', name: 'slf4j-android', version: '1.7.25'
 }
